--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -702,7 +702,7 @@ Occasionally there was an anomaly where a single null plot was selected with a h
   \label{anom2}
 \end{figure}
 
-Figures~\ref{anom1} and \ref{anom2} show lineups where a null plot with a strong pattern led to its selection over the data plot.  Mostly, when a null plot was chosen over the data plot it was because the correlation was stronger, but in a few lineups a null plot with small correlation was selected by many subjects. In Figure~\ref{anom1}, the true data plot is in position 4, but 9 out of 11 subjects chose plot 6. Plot 6 is unusual, most of the points are scattered around the vertical median, but there are two outlying points, one with a high y-value and one with a low y-value.  Other concurrent work has suggested that outliers are pre-attentive patterns and this plot selection by the observers is consistent with that. Figure~\ref{anom2} above is another example of where subjects chose a null plot that had smaller correlation than the data plot. Four out of five evaluations selected the null plot in position 13, instead of the data plot in position 8. Plot 13 has a correlation of 0.225, smaller (in absolute value) than the -0.707 of plot 8. This selection gives evidence towards Wertheimer’s gestalt law of common fate, as subjects may be selecting this plot focused on the joint path of the two series early in Plot 13 and ignored the contradictory evidence of no relationship as they diverged later in the plot similar to the series in figure ~\ref{cny}.  It also confounded by the seeming preference to find positive correlation over negative correlation, and we suspect that if one of the series in plot 8 had the values flipped, then the strong positive correlation may have been noticed.
+Figures~\ref{anom1} and \ref{anom2} show examples of this in some lineups where a null plot with an unusually strong pattern led to selection of a null over the data plot. In Figure~\ref{anom1}, the true data plot is in position 4, but 9 out of 11 subjects chose plot 6. Plot 6 is unusual, most of the points are scattered around the vertical median, but there are two outlying points, one with a high y-value and one with a low y-value.  Other concurrent work has suggested that outliers are pre-attentive patterns and this plot selection by the observers is consistent with that. Figure~\ref{anom2} above is another example of where subjects chose a null plot that had smaller correlation than the data plot. Four out of five evaluations selected the null plot in position 13, instead of the data plot in position 8. Plot 13 has a correlation of 0.225, smaller (in absolute value) than the -0.707 of plot 8. This selection gives evidence towards Wertheimer’s gestalt law of common fate, as subjects may be selecting this plot focused on the joint path of the two series early in Plot 13 and ignored the contradictory evidence of no relationship as they diverged later in the plot similar to the series in figure ~\ref{cny}.  It also confounded by the seeming preference to find positive correlation over negative correlation, and we suspect that if one of the series in plot 8 had the values flipped, then the strong positive correlation may have been noticed.
 
 \subsection{Modelling graphical power}
 
