--- a/paper/references.bib
+++ b/paper/references.bib
@@ -497,6 +497,14 @@ address = {Los Alamitos, CA, USA},
   url = {http://CRAN.R-project.org/package=gridSVG}
 }
 
+@Manual{poibin,
+  title = {poibin: The Poisson Binomial Distribution},
+  author = {Yili Hong},
+  year = {2013},
+  note = {R package version 1.2},
+  url = {http://CRAN.R-project.org/package=poibin},
+}
+
 @Manual{Rstudio,
   title = {RStudio: Integrated Development Environment for R}, 
   author = {{RStudio Team}}, 
